# LearnGL

./: CMakeLists.txt  Structs.hpp  main.cpp
include/glad/: glad.h
src/: glad.c
